--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "nodemon": "^3.1.9"
   }
 }
